# blender

./: .gitmodules  CMakeLists.txt  fix_shaders_for_materialx.sh  run_cmake
build_files/cmake/platform/: platform_apple.cmake  platform_apple_xcode.cmake  platform_unix.cmake
intern/cycles/: CMakeLists.txt
intern/cycles/app/: CMakeLists.txt  cycles_standalone.cpp  cycles_standalone.h  cycles_xml.cpp  cycles_xml.h  oiio_output_driver.h
intern/cycles/app/rib_parser/: error.h  intern_cache.h  parallel.cpp  parallel.h  param_dict.cpp  param_dict.h  parsed_parameter.cpp  parsed_parameter.h  parser.cpp  parser.h  ri_api.cpp  ri_api.h  ri_api_distributed.cpp  ri_api_distributed.h  scene_entities.h
intern/cycles/app/rib_parser/exporters/: attribute.cpp  attribute.h  curves.cpp  curves.h  geometry.cpp  geometry.h  lights.cpp  lights.h  node_util.cpp
intern/cycles/app/rib_parser/exporters/materials/: convert_lama_network.cpp  convert_lama_network.h  materials.cpp  materials.h  rib_to_cycles.cpp  rib_to_cycles.h  shader_defaults.h
intern/cycles/app/rib_parser/shaders/: CMakeLists.txt  PxrAdjustNormal.oso  PxrArithmetic.oso  PxrAttribute.oso  PxrBlackBody.oso  PxrBlend.oso  PxrBlenderPrincipledInputs.oso  PxrBump.oso  PxrBumpManifold2D.oso  PxrBumpMixer.oso  PxrBumpRoughness.oso  PxrChecker.oso  PxrClamp.oso  PxrColorCorrect.oso  PxrColorGrade.oso  PxrColorSpace.oso  PxrCross.oso  PxrCurvature.oso  PxrDirt.oso  PxrDispScalarLayer.oso  PxrDispTransform.oso  PxrDispVectorLayer.oso  PxrDisplace.oso  PxrDot.oso  PxrEnvGround.oso  PxrExposure.oso  PxrFacingRatio.oso  PxrFlakes.oso  PxrFractal.oso  PxrGamma.oso  PxrGrid.oso  PxrHSL.oso  PxrHairColor.oso  PxrHexTileManifold.oso  PxrInvert.oso  PxrLayer.oso  PxrLayerMixer.oso  PxrLayeredBlend.oso  PxrLayeredTexture.oso  PxrManifold2D.oso  (+37 more)
intern/cycles/app/tev/: display_driver.cpp  display_driver.h
intern/cycles/blender/: mesh.cpp
intern/cycles/cmake/: external_libs.cmake
intern/cycles/distributed/: CMakeLists.txt  distributed.cpp  distributed.h
intern/cycles/kernel/device/cpu/: bvh.h
intern/cycles/kernel/osl/shaders/: CMakeLists.txt
intern/cycles/scene/: shader_nodes.cpp
intern/cycles/session/: session.h
intern/cycles/util/: path.cpp  projection.h
release/scripts/startup/bl_ui/: properties_data_mesh.py
source/blender/blenkernel/: BKE_DerivedMesh.h  BKE_deform.h  BKE_mesh.h  BKE_mesh.hh  BKE_mesh_legacy_convert.h  BKE_mesh_mapping.h  BKE_mesh_remap.h  BKE_mesh_tangent.h  BKE_mesh_types.h  BKE_multires.h  BKE_paint.h  BKE_pbvh.h  BKE_shrinkwrap.h  BKE_subdiv_ccg.h
source/blender/blenkernel/intern/: DerivedMesh.cc  bvhutils.cc  cdderivedmesh.cc  cloth.cc  crazyspace.cc  curve_to_mesh_convert.cc  customdata.cc  data_transfer.cc  deform.cc  dynamicpaint.cc  effect.c  fluid.cc  geometry_component_mesh.cc  gpencil_geom.cc  gpencil_geom_legacy.cc  key.cc  mball_tessellate.cc  mesh.cc  mesh_boolean_convert.cc  mesh_calc_edges.cc  mesh_convert.cc  mesh_evaluate.cc  mesh_fair.cc  mesh_iterators.cc  mesh_legacy_convert.cc  mesh_mapping.cc  mesh_merge.c  mesh_merge_customdata.cc  mesh_mirror.cc  mesh_normals.cc  mesh_remap.cc  mesh_remesh_voxel.cc  mesh_runtime.cc  mesh_tangent.cc  mesh_tessellate.cc  mesh_validate.cc  mesh_wrapper.cc  multires.cc  multires_reshape.hh  multires_reshape_apply_base.cc  (+26 more)
source/blender/blenlib/: BLI_offset_indices.hh
source/blender/blenloader/intern/: versioning_290.cc  versioning_300.cc  versioning_400.cc
source/blender/bmesh/intern/: bmesh_mesh_convert.cc
source/blender/draw/: DRW_pbvh.hh
source/blender/draw/engines/basic/: basic_engine.c
source/blender/draw/engines/eevee/: eevee_materials.c
source/blender/draw/intern/: draw_cache_extract_mesh.cc  draw_cache_extract_mesh_render_data.cc  draw_cache_impl_subdivision.cc  draw_pbvh.cc
source/blender/draw/intern/mesh_extractors/: extract_mesh.hh  extract_mesh_ibo_edituv.cc  extract_mesh_ibo_fdots.cc  extract_mesh_ibo_lines.cc  extract_mesh_ibo_lines_paint_mask.cc  extract_mesh_ibo_points.cc  (+18 more)
source/blender/editors/armature/: meshlaplacian.cc
source/blender/editors/include/: ED_mesh.h
source/blender/editors/mesh/: editface.cc  mesh_data.cc  meshtools.cc
source/blender/editors/object/: object_bake_api.cc  object_remesh.cc  object_vgroup.cc
source/blender/editors/sculpt_paint/: curves_sculpt_add.cc  curves_sculpt_puff.cc  curves_sculpt_slide.cc  paint_hide.c  paint_hide.cc  paint_image_proj.cc  paint_mask.cc  paint_vertex.cc  paint_vertex_weight_ops.cc  sculpt.cc  sculpt_dyntopo.cc  sculpt_expand.cc  sculpt_face_set.cc  sculpt_geodesic.cc  sculpt_intern.h  sculpt_intern.hh  sculpt_ops.cc  sculpt_undo.cc
source/blender/editors/space_spreadsheet/: spreadsheet_data_source_geometry.cc
source/blender/editors/space_view3d/: drawobject.cc
source/blender/editors/transform/: transform_snap_object.cc
source/blender/editors/uvedit/: uvedit_unwrap_ops.cc
source/blender/geometry/intern/: add_curves_on_mesh.cc  mesh_merge_by_distance.cc  mesh_primitive_cuboid.cc  mesh_split_edges.cc  mesh_to_volume.cc  realize_instances.cc
source/blender/gpu/intern/: gpu_shader_builder_stubs.cc
source/blender/io/collada/: GeometryExporter.cpp  MeshImporter.cpp  MeshImporter.h
source/blender/makesdna/: DNA_mesh_types.h  DNA_meshdata_types.h
source/blender/makesdna/intern/: dna_rename_defs.h
source/blender/makesrna/intern/: rna_mesh.c  rna_mesh_api.c  rna_object.c  rna_particle.c  rna_sculpt_paint.c
source/blender/modifiers/intern/: MOD_array.cc  MOD_build.cc  MOD_correctivesmooth.cc  MOD_displace.cc  MOD_explode.cc  MOD_laplaciandeform.c  MOD_laplaciandeform.cc  MOD_laplaciansmooth.cc  MOD_mask.cc  MOD_meshsequencecache.cc  MOD_multires.cc  MOD_normal_edit.cc  MOD_ocean.cc  MOD_particleinstance.cc  MOD_remesh.cc  MOD_screw.cc  MOD_solidify_extrude.cc  MOD_solidify_nonmanifold.cc  MOD_surfacedeform.cc  MOD_util.cc  MOD_uvproject.cc  MOD_uvwarp.cc  MOD_weighted_normal.cc
source/blender/python/mathutils/: mathutils_bvhtree.cc
source/blender/render/intern/: bake.cc  multires_bake.cc  texture_margin.cc  texture_pointdensity.c
(+39 files in other folders)
